tests/ui/specialization/specialization-default-types.current.stderr
error[E0308]: mismatched types
  --> $DIR/specialization-default-types.rs:19:9
   |
LL |     default type Output = Box<T>;
   |     ------------------- associated type is `default` and may be overridden
LL |     default fn generate(self) -> Self::Output {
   |                                  ------------ expected `<T as Example>::Output` because of return type
LL |         Box::new(self)
   |         ^^^^^^^^^^^^^^ expected associated type, found `Box<T>`
   |
   = note: expected associated type `<T as Example>::Output`
                       found struct `Box<T>`
   = note: the associated type `<T as Example>::Output` is defined as `Box<T>` in the implementation, but the where-bound `T` shadows this definition
           see issue #152409 <https://github.com/rust-lang/rust/issues/152409> for more information

error[E0308]: mismatched types
  --> $DIR/specialization-default-types.rs:29:5
   |
LL | fn trouble<T>(t: T) -> Box<T> {
   |                        ------ expected `Box<T>` because of return type
LL |     Example::generate(t)
   |     ^^^^^^^^^^^^^^^^^^^^ expected `Box<T>`, found associated type
   |
   = note:       expected struct `Box<T>`
           found associated type `<T as Example>::Output`
   = help: consider constraining the associated type `<T as Example>::Output` to `Box<T>`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html
   = note: the associated type `<T as Example>::Output` is defined as `Box<T>` in the implementation, but the where-bound `T` shadows this definition
           see issue #152409 <https://github.com/rust-lang/rust/issues/152409> for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
